feat: riot summoner 검색, 레디스 최근 검색어 추가